--- a/src/css/Note.css
+++ b/src/css/Note.css
@@ -54,11 +54,17 @@
   -webkit-box-shadow: inset 0 8px 5px rgba(255,255,255,0.65), 0 1px 2px rgba(0,0,0,0.2);
   -moz-box-shadow: inset 0 8px 5px rgba(255,255,255,0.65), 0 1px 2px rgba(0,0,0,0.2);
   box-shadow: inset 0 8px 5px rgba(255,255,255,0.65), 0 1px 2px rgba(0,0,0,0.2);
-  margin-bottom: 20px;
-  padding: 6px 20px;
   color: #000;
   text-shadow: 0 1px 1px rgba(255,255,255,0.8);
   word-wrap: break-word;
+  padding: 15px;
+  padding-bottom: 5px;
+  margin: 0 2px 15px;
+
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
+  column-break-inside: avoid;
+
 }
 
 .bubble:before, .bubble:after {
@@ -114,14 +120,13 @@
 .shaking {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
   perspective: 1000px;
   animation-iteration-count: infinite;;
 }
 
 @keyframes shake {
   10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+    transform: translate3d(0-1px, 0, 0);
   }
 
   20%, 80% {
