Not the best attempt to implement visJS Network object

--- a/src/css/MessageLayout.css
+++ b/src/css/MessageLayout.css
@@ -1,5 +1,8 @@
-.notes-grid {
+.messages-layout {
     margin: 0 auto;
+    min-width: 900px;
+    min-height: 1000px;
+    height: 1000px;
 }
 
 .note:last-child{
