--- a/src/css/MessageEditor.css
+++ b/src/css/MessageEditor.css
@@ -23,16 +23,21 @@
     outline: 0;
 }
 
-.add-button {
-    align-self: flex-end;
-    width: 100px;
+.buttons-area{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.add-button{
+    width: auto;
     background-color:#44c767;
     border-radius:28px;
     border:1px solid #18ab29;
     cursor:pointer;
     color:#ffffff;
     font-size:14px;
-    padding:8px 8px;
+    padding:12px 12px;
     text-transform: uppercase;
     text-decoration:none;
     text-shadow:0px 1px 0px #2f6627;
@@ -40,6 +45,11 @@
 
 .add-button:hover {
     background-color:#5cbf2a;
+}
+
+.add-button:disabled {
+    background-color: grey;
+    border-color: grey;
 }
 
 .add-button:active {
